[package]
name = "leptos_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
reqwasm = "0.5"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
thiserror = "1"
serde = "1.0.193"
leptos-use = "0.9.0"
leptos_reactive = "0.5.4"
leptos_meta = "0.5.4"
leptos_router = "0.5.4"
